2006-03-31  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Add debug, valgrind and gcov. Remove c++/malloc cruft
	* gnl/gnlcomposition.c: (hash_value_destroy),
	(gnl_composition_dispose), (gnl_composition_finalize),
	(unlock_child_state), (ready_and_lock_child_state),
	(gnl_composition_reset), (gnl_composition_handle_message),
	(gnl_composition_change_state), (update_pipeline),
	(object_pad_removed), (gnl_composition_add_object):
	Handle pads being removed on controlled objects, and remove the
	composition ghostpad if the object is the top-level one.
	Memleak fixes.
	Properly lock/unlock the state of the childs between READY and PAUSED.
	Properly return success or not in update_pipeline()
	* gnl/gnlfilesource.c: (decodebin_pad_removed_cb):
	Use gnl_object_remove_ghost_pad ()
	* gnl/gnlobject.c: (gnl_object_class_init), (gnl_object_dispose),
	(translate_incoming_seek), (translate_outgoing_new_segment),
	(internalpad_event_function), (control_internal_pad),
	(ghostpad_link_function), (ghostpad_unlink_function),
	(gnl_object_remove_ghost_pad), (gnl_object_change_state):
	* gnl/gnlobject.h:
	Add gnl_object_remove_ghost_pad() to properly remove the GnlPadPrivate
	data from the ghostpads used in GnlObjects.
	Memleak fixes.
	* gnl/gnlsource.c: (gnl_source_remove_element):
	* tests/check/Makefile.am:
	* tests/check/simple.c: (composition_pad_added_cb),
	(GST_START_TEST):

2006-03-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* configure.ac:
	* tests/check/Makefile.am:
	  use pluginsdir exposed by core and base .pc files to find
	  elements like videotestsrc and fakesink

2006-03-30  Edward Hervey  <edward@fluendo.com>

	* autogen.sh:
	Fix up autogen.sh for common/ since we're now in gstreamer cvs.

2006-03-30  Edward Hervey  <edward@fluendo.com>

	* Makefile.am:
	test/directory is gone

2006-03-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* po/Makefile.in.in: